Add JVM flag to allow java agent self attachement